--- a/quayacm-review/deployment.yaml
+++ b/quayacm-review/deployment.yaml
@@ -24,6 +24,7 @@ spec:
         ports:
         - containerPort: 8080
           name: budget-app
-        imagePullSecret: finance-production-deployer-pull-secret
+        imagePullSecrets: 
+        - finance-production-deployer-pull-secret
 
 ---
