--- a/quayacm-review/deployment.yaml
+++ b/quayacm-review/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         name: budget-app
     spec:
       imagePullSecrets: 
-        - finance-production-deployer-pull-secret
+        - name:  finance-production-deployer-pull-secret
       containers:
       - image: central-quay-registry.apps.ocp4.example.com/finance/budget-app-dev:1.0
         name: budget-app
